--- a/website/src/App.css
+++ b/website/src/App.css
@@ -1,38 +1,34 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+  height: 100vh;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  text-align: center;
   color: white;
+  font-size: 2rem;
+  height: 100vh;
+  width: 100%;
+  background-size: 400% 400%;
 }
 
-.App-link {
-  color: #61dafb;
+h1 {
+  margin: 0;
+  padding-top: 100px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.cursor {
+  display: inline-block;
+  margin-left: 3px;
+  color: white;
+  font-weight: 700;
+  user-select: none;
+  animation: blink 1s step-start infinite;
+}
+
+@keyframes blink {
+  0%, 50% {
+    opacity: 1;
   }
-  to {
-    transform: rotate(360deg);
+  51%, 100% {
+    opacity: 0;
   }
 }
