--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
 
 h1 {
   margin: 0;
-  padding-top: 100px;
+  padding-top: 1em;
 }
 
 .cursor {
@@ -22,6 +22,38 @@ h1 {
   font-weight: 700;
   user-select: none;
   animation: blink 1s step-start infinite;
+}
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  margin: 4em;
+}
+
+.button {
+  background-color: white;
+  width: 316px;
+  height: 116px;
+  border-radius: 16px;
+  font-size: 2rem;
+  border: none;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
+
+.button:hover {
+  background-color: black;
+  color: white;
+  cursor: pointer;
+}
+
+#pfp {
+  height: 316px;
+  width: 316px;
+  border-radius: 50%;
+  object-fit: cover;
+  border: 4px solid white;
 }
 
 @keyframes blink {
